--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
     </div>
 
-    <div class="main main-2">
+    <div class="main main-2 diff">
         <div class="content-img">
             <img src="/images/testing.svg" alt="technical support">
         </div>
